--- a/package.json
+++ b/package.json
@@ -63,15 +63,15 @@
     "react-native": "^0.57.8",
     "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "^16.6.3",
-    "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-saga-test-plan": "4.0.0-beta.2",
     "redux-thunk": "^2.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "@react-native-community/netinfo": "~2.0.10",
     "react-redux": "^5.1.1",
-    "redux": "4.x",
+    "redux": "~4.0",
     "redux-saga": "^1.0.2"
   },
   "jest": {
