--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "react-native": "^0.57.8",
     "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "^16.6.3",
-    "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-saga-test-plan": "4.0.0-beta.2",
     "redux-thunk": "^2.3.0"
@@ -72,7 +71,8 @@
     "@react-native-community/netinfo": "^4.1.2",
     "lodash": "^4.17.11",
     "react-redux": "^6.0.0 || ^7.0.0",
-    "redux": "4.x",
+    "redux": "~4.0",
+    "@react-native-community/netinfo": "~2.0.10",
     "redux-saga": "^1.0.2"
   },
   "jest": {
