--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "lodash": "^4.17.11",
     "@react-native-community/netinfo": "~2.0.10",
     "react-redux": "^5.1.1",
-    "redux": "~4.0",
-    "redux-saga": "^1.0.2"
+    "redux": "~4.0"
   },
   "jest": {
     "collectCoverage": true,
