--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "lodash": "^4.17.11",
     "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "~4.0",
-    "@react-native-community/netinfo": "~2.0.10",
-    "redux-saga": "^1.0.2"
+    "@react-native-community/netinfo": "~2.0.10"
   },
   "jest": {
     "collectCoverage": true,
