--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "redux-thunk": "^2.3.0"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "~3.2.1",
+    "@react-native-community/netinfo": "^4.6.0",
     "lodash": "^4.17.11",
     "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "~4.0"
