--- a/package.json
+++ b/package.json
@@ -99,8 +99,7 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "react-redux": "^7.0.0",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2"
+    "redux": "^4.0.1"
   },
   "peerDependencies": {
     "@react-native-community/netinfo": ">= 4.6 < 6",
